samples/_failures_safe/1761076204_605b00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11ff23ab.c: In function ‘main’:
./samples/SAFE/__tmp_11ff23ab.c:157: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_11ff23ab.c:156:5: error: expected declaration or statement at end of input
  156 |     while
      |     ^~~~~
